# stuff

./: basic_installs  basic_pkg  brainvita.py  brainvita_iterative.py  client.py  decorator_test.py  f10  flippingBits.py  genAnd.py  genTablxor.py  image_url_scraper.py  input.xlsx  lcm.py  lexrank.py  mul.py  myfile.txt  nameGuesser.py  names.txt  numberGuesser.py  options.txt  python.py  requirements  sample.txt  seg_tree.scala  server.py  src.txt  test.py  test.txt  thread_prac.py  txt_file_from_net.py
csvparsing/: Makefile
django-test/: .gitignore  README.md
fastapi-test/: .gitignore  README.md  requirements.txt
gogogo/: README.md
graphql-starlette-react/: README.md
graphql-starlette-react/api/: Makefile  pyproject.toml
graphql-starlette-react/api/api/: __init__.py  asgi.py  data.py
graphql-starlette-react/api/api/graphql/: __init__.py
graphql-starlette-react/api/api/graphql/mutations/: mutations.py
graphql-starlette-react/api/api/graphql/schemas/: schemas.py
graphql-starlette-react/api/api/routes/: home.py
graphql-starlette-react/api/configs/: gunicorn.py
huffman/: Makefile  tests.py
lazyeval/: README.md  package.json
networking/: netstat.py  traceroute.py  tracert.py
notes/: notes.md  scratch.txt
simple-http-server/: server.py
stuff/: DecisionTree.py  ICPC_2017_1.py  Result.txt  TC_HebbClassification.py  add.py  basic_pyspark.py  chatBot.py  class&obj.py  concur_access.py  display_csv.py  f20  format_md_table.py  fp_and_curry.py  gcd.py  greatXor.py  imgDownloader.py  log.py  longest_fib_seq.py  modulo_inv.py  ny51-cctv.py  one.py  (+13 more)
(+76 files in other folders)
